--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,36 @@ html, body, .container {
 
 .container {
     display: grid;
+    /* Need position relative to do z-indexing */
+    position: relative;
     grid-template-rows: 100px 1fr;
 }
 
 .header {
+    display: grid;
+    position: relative;
+    z-index: 2;
+    grid-template-columns: 1fr 1fr;
     background-color: aqua;
+    padding-left: 10%;
+    padding-right: 10%;
+    align-items: center;
+    box-shadow: 0px 0px 5px grey;
+}
+
+.header:nth-child(1) {
+    font-size: 2rem;
+}
+
+.header > button {
+    height: 2.5rem;
+    width: 6rem;
+    font-size: 1.5rem;
+    justify-self: end;
 }
 
 .table {
-    background-color: grey;
+    position: relative;
+    z-index: 1;
+    background-color: whitesmoke;
 }
