--- a/styles.css
+++ b/styles.css
@@ -74,10 +74,27 @@ html, body, .container {
 
 .card-content {
     display: flex;
+    flex: 1; /* Helps to stretch the whole card */
     flex-direction: column;
     justify-content: space-evenly;
-    align-items: center;
     font-size: 1.5rem;
+}
+
+.card-content > div {
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 10px;
+}
+
+.card-content > div:nth-child(4) {
+    background-color: rgb(241 161 159);
+}
+
+.card-content > div:nth-child(5) {
+    background-color: rgb(234, 232, 232);
 }
 
 .footer {
