--- a/styles.css
+++ b/styles.css
@@ -1,124 +1,125 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
 }
 
-html, body, .container {
-    height: 100%;
+html,
+body,
+.container {
+  height: 100%;
 }
 
 .container {
-    display: grid;
-    /* Need position relative to do z-indexing */
-    position: relative;
-    grid-template-rows: 100px 120px 1fr 40px;
+  display: grid;
+  /* Need position relative to do z-indexing */
+  position: relative;
+  grid-template-rows: 100px 120px 1fr 40px;
 }
 
 .header {
-    display: grid;
-    position: relative;
-    z-index: 2;
-    grid-template-columns: 1fr 1fr;
-    background-color: aqua;
-    padding-left: 10%;
-    padding-right: 10%;
-    align-items: center;
-    box-shadow: 0px 0px 5px grey;
+  display: grid;
+  position: relative;
+  z-index: 2;
+  grid-template-columns: 1fr 1fr;
+  background-color: aqua;
+  padding-left: 10%;
+  padding-right: 10%;
+  align-items: center;
+  box-shadow: 0px 0px 5px grey;
 }
 
 .header:nth-child(1) {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 .header > button {
-    height: 2.5rem;
-    width: 6rem;
-    font-size: 1.5rem;
-    justify-self: end;
+  height: 2.5rem;
+  width: 6rem;
+  font-size: 1.5rem;
+  justify-self: end;
 }
 
 .add-book {
-    display: flex;
-    position: relative;
-    z-index: 1;
-    background-color: whitesmoke;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  position: relative;
+  z-index: 1;
+  background-color: whitesmoke;
+  justify-content: center;
+  align-items: center;
 }
 
 .add-book > button {
-    height: 3rem;
-    width: 10rem;
-    font-size: 1.5rem;
+  height: 3rem;
+  width: 10rem;
+  font-size: 1.5rem;
 }
 
 .table {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, 400px);
-    grid-template-rows: repeat(auto-fit, 350px);
-    justify-content: center;
-    background-color: whitesmoke;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 400px);
+  grid-template-rows: repeat(auto-fit, 350px);
+  justify-content: center;
+  background-color: whitesmoke;
 }
 
 .card {
-    background-color: white;
-    margin: 20px;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
+  background-color: white;
+  margin: 20px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
 }
 
-
 .card-content {
-    display: flex;
-    flex: 1; /* Helps to stretch the whole card */
-    flex-direction: column;
-    justify-content: space-evenly;
-    font-size: 1.5rem;
+  display: flex;
+  flex: 1; /* Helps to stretch the whole card */
+  flex-direction: column;
+  justify-content: space-evenly;
+  font-size: 1.5rem;
 }
 
 .card-content > div {
-    text-align: center;
-    margin-left: 20px;
-    margin-right: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 10px;
+  text-align: center;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 10px;
 }
 
 .card-content > .not-read {
-    background-color: rgb(241 161 159);
+  background-color: rgb(241 161 159);
 }
 
 .card-content > .read {
-    background-color: lightgreen;
+  background-color: lightgreen;
 }
 
 .card-content > .not-read:hover {
-    background-color: rgb(238, 143, 142);
-    cursor: pointer;
+  background-color: rgb(238, 143, 142);
+  cursor: pointer;
 }
 
 .card-content > .read:hover {
-    background-color: rgb(123, 207, 123);
-    cursor: pointer;
+  background-color: rgb(123, 207, 123);
+  cursor: pointer;
 }
 
 .card-content > .remove {
-    background-color: rgb(234, 232, 232);
+  background-color: rgb(234, 232, 232);
 }
 
 .card-content > .remove:hover {
-    background-color: rgb(210, 207, 207);
-    cursor: pointer;
+  background-color: rgb(210, 207, 207);
+  cursor: pointer;
 }
 
 .footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: beige;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: beige;
 }
