added dialog functionality

--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ body,
   justify-self: end;
 }
 
-.add-book {
+.add-book-button {
   display: flex;
   position: relative;
   z-index: 1;
@@ -51,7 +51,7 @@ body,
   align-items: center;
 }
 
-.add-book > button {
+.add-book-button > button {
   height: 3rem;
   width: 10rem;
   font-size: 1.5rem;
